# llm-serving-lab

./: .dockerignore  .gitignore  CHECKSUMS.sha256  FILE_INDEX.md  README.md  pyproject.toml
docs/notes/: 001_inference_basics.md
evidence/w01/daily_oral/: 2026-07-16.md
evidence/w01/self_tests/: 2026-07-13_env_pre.md  2026-07-13_tokenizer_concept_gate.md  2026-07-13_tokenizer_pre.md  2026-07-16_inference_basics.md
evidence/w01/small_probe/: 2026-07-13_must2.py  2026-07-13_must2_observations.md
experiments/w01/: autoregressive_toy.py  tokenizer_probe.py
results/w01/: autoregressive_toy.json  tokenizer_probe.json
src/llm_serving_lab/: __init__.py
