[project]
name = "llm-serving-lab"
version = "0.1.0"
description = "Reproducible LLM serving benchmark and performance analysis lab."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "transformers==5.13.1",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.28,<0.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
